# easynn_ros

./: CMakeLists.txt  package.xml  readme.md  requirements.txt  setup.py
msg/: CMakeLists.txt  ObjectBox.msg  package.xml
src/: AbstractTrainer.py  TrainStarter.py  cur_data.yaml  easySub.py  imageSubscriber.py  webcamPublisher.py
